# Naer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.sh  build.sh  naer-results.txt  spice-results.txt  spice-updated-results.txt  spike-results.txt
benchmarks/: nest-gpu.py  notes.txt
include/naer/: Connection.h  CuBaLIF.h  LIF.h  Network.h  NeuronType.h  Population.h  naer_types.h
include/naer/kernels/: basic_stdp.cl  input_neuron_group.cl  lif.cl  naer.cl  network.cl  nop.cl  nop_group.cl  processing_neuron_group.cl  random.cl  spike_aggregation.cl  stdp.cl  stdp_group.cl
naer/: __init__.py  idealized.py  main.py  types.py
naer/connections/: connection.py  full.py  sparse.py
naer/neurons/: lif.py  neuron.py
naer/renderer/: cstyle.py  renderer.py
src/: Connection.cpp  Network.cpp  NeuronType.cpp  main.cpp
